# assignment-task

./: .gitmodules  CMakeLists.txt  README.md  generate.py  main.cc
data/whisper-tiny/vulkan/: mlc-chat-config.json  mlc-chat-config.json.old  ndarray-cache-b16.json  ndarray-cache.json
data/whisper-tiny/vulkan/debug_dump/: debug-phase0.py  debug-phase1.py  debug-phase2.py  debug-phase3.py  debug-phase4.py
lib/: CMakeLists.txt  model.cc  model.h  translate.cc  translate.h
